# brocseg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.py  debug.bat  rebuild.bat  run.bat
src/: broccommon.h  brocmath.h  brocprof.h  brocrender.h  brocseg.cpp  shader.fs  shader.vs
